DATE        AUTHOR      CHANGE
----------- ----------- -------------------------------------------------------
Aug-16-2003 patrickh    Updated to Tweek 0.15.
                        NEW VERSION: 0.12.2
Aug-15-2003 aronb       Fixed RTRC so that it now works with vrjconfig.
                        NEW VERSION: 0.12.1
Jul-10-2003 patrickh    Removed the ConfigUpdater utility.
Jul-10-2003 nonchocoboy Merged everything from jccl_config_refactor_branch.
                        Among other things, this officially renames "config
                        chunk" to "config element" and "chunk desc" to
                        "config definition."  The configuration and definition
                        file formats have changed extensively as part of this.
                        NEW VERSION: 0.12.0
Jun-03-2003 browner     Removed the perfMonitor stuff so we could rewrite it
                        from scratch.
                        NEW VERSION: 0.11.0
May-20-2003 patrickh    configure.in requries Autoconf 2.53 or newer.
May-06-2003 patrickh    Restored the ability to read symbolic values from
                        configuration files where value enumerations are used.
                        NEW VERSION: 0.10.1
Apr-09-2003 nonchocoboy Embedded chunks may now be heterogenously defined. The
                        allowed types list is used to specify which types of
                        chunks are allowed for a given property containing
                        embedded chunks.
Mar-04-2003 allenb      Fixed config chunk and config description equality
                        operators.  Commented out old un-used dependency
                        sorting method.
Feb-27-2003 nonchocoboy Added a version property to both config chunks and
                        chunk descs to be used for future work.
                        Bumped desc file format version to 2.3.
                        Bumped config file format version to 2.2.